<resources>
    <string name="app_name">Smpl Inventory</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_inventory">Inventory</string>
    <string name="client_id">64477000012-0815f5uc8rpdps8qta0ctm5j4ob58ldo.apps.googleusercontent.com</string>
    <string name="scan_prompt_msg">Scan a barcode</string>
    <string name="sbar_cannot_read">Cannot read barcode</string>
    <string name="title_activity_scan_result">Updating Inventory</string>
    <string name="action_refresh">Refresh</string>
    <string name="pref_access_token">Access Token</string>
    <string name="pref_inv_file">Inventory File Name</string>
    <string name="pref_tran_file">Transaction File Name</string>
    <string name="action_account">Account</string>
    <string name="title_login">Account</string>
    <string name="title_settings">Settings</string>
    <string name="shared_pref_upcdb_key">SHARED_PREF_UPCDB_KEY</string>
    <string name="shared_pref_inv_filename">SHARED_PREF_INVENTORY_FILE_NAME</string>
    <string name="shared_pref_tran_filename">SHARED_PREF_TRANSACTION_FILE_NAME</string>
    <string name="shared_pref_upcdb_default_value">73C8EA26-5AFE-44AC-B193-ED15B574B377</string>
    <string name="shared_pref_inv_filename_default_value">Inventory</string>
    <string name="shared_pref_tran_filename_default_value">Transaction</string>
    <string name="pref_file_msg">Make sure these 2 spreadsheets are created in Google drive, root folder:</string>
</resources>
